--- a/pages/filmpjes.html
+++ b/pages/filmpjes.html
@@ -7,16 +7,16 @@
 {% block logo-position %}top: 40px; left: 730px;{% endblock %}
 
 {% block head %}
-    <link rel="stylesheet" href="http://arne.delaat.net/static/css/vendor/normalize.css">
-    <link rel="stylesheet" href="http://arne.delaat.net/static/css/vendor/font-awesome.css">
-    <link rel="stylesheet" href="http://arne.delaat.net/static/css/tipTip.css">
-    <link rel="stylesheet" href="http://arne.delaat.net/static/css/video.css">
-    <link rel="stylesheet" href="http://arne.delaat.net/static/css/icons.css">
-    <link rel="stylesheet" href="http://arne.delaat.net/static/css/controls.css">
-    <link rel="stylesheet" href="http://arne.delaat.net/static/css/thumbs/D80.css">
-    <link rel="stylesheet" href="http://arne.delaat.net/static/css/thumbs/D90.css">
-    <link rel="stylesheet" href="http://arne.delaat.net/static/css/thumbs/D700.css">
-    <link rel="stylesheet" href="http://arne.delaat.net/static/css/thumbs/S60.css">
+    <link rel="stylesheet" href="https://arne.delaat.net/static/css/vendor/normalize.css">
+    <link rel="stylesheet" href="https://arne.delaat.net/static/css/vendor/font-awesome.css">
+    <link rel="stylesheet" href="https://arne.delaat.net/static/css/tipTip.css">
+    <link rel="stylesheet" href="https://arne.delaat.net/static/css/video.css">
+    <link rel="stylesheet" href="https://arne.delaat.net/static/css/icons.css">
+    <link rel="stylesheet" href="https://arne.delaat.net/static/css/controls.css">
+    <link rel="stylesheet" href="https://arne.delaat.net/static/css/thumbs/D80.css">
+    <link rel="stylesheet" href="https://arne.delaat.net/static/css/thumbs/D90.css">
+    <link rel="stylesheet" href="https://arne.delaat.net/static/css/thumbs/D700.css">
+    <link rel="stylesheet" href="https://arne.delaat.net/static/css/thumbs/S60.css">
 {% endblock %}
 
 {% block style %}
@@ -35,9 +35,9 @@
     </p>
 
     <ul id="thumbnails" style="background-color:#fff; padding-left: 0px;">
-             <li class="thu" id="SHS_Geronimo_Zeist_131012" style="background: url('http://arne.delaat.net/Movies/thumbs/SHS_Geronimo_Zeist_131012.png');" data-960 data-1920 data-audio>
-        </li><li class="thu" id="iPad_111029_2" style="background: url('http://arne.delaat.net/Movies/thumbs/iPad_111029_2.jpg');" data-960 data-1920 data-audio>
-        </li><li class="thu" id="iPad_111029_1" style="background: url('http://arne.delaat.net/Movies/thumbs/iPad_111029_1.jpg');" data-960 data-1920 data-audio>
+             <li class="thu" id="SHS_Geronimo_Zeist_131012" style="background: url('https://arne.delaat.net/Movies/thumbs/SHS_Geronimo_Zeist_131012.png');" data-960 data-1920 data-audio>
+        </li><li class="thu" id="iPad_111029_2" style="background: url('https://arne.delaat.net/Movies/thumbs/iPad_111029_2.jpg');" data-960 data-1920 data-audio>
+        </li><li class="thu" id="iPad_111029_1" style="background: url('https://arne.delaat.net/Movies/thumbs/iPad_111029_1.jpg');" data-960 data-1920 data-audio>
         </li><li class="thu d700" id="D700_D90_120524_1_2_3_4" data-960 data-1920>
         </li><li class="thu d80" id="D80_100816_3" data-960>
         </li><li class="thu d80" id="D80_090906_2" data-960>
@@ -54,7 +54,7 @@
 {% endblock %}
 
 {% block scripts %}
-    <script src="http://arne.delaat.net/static/js/vendor/jquery-1.10.2.js"></script>
-    <script src="http://arne.delaat.net/static/js/vendor/jquery.tipTip.min.js"></script>
-    <script src="http://arne.delaat.net/static/js/video.js"></script>
+    <script src="https://arne.delaat.net/static/js/vendor/jquery-1.10.2.js"></script>
+    <script src="https://arne.delaat.net/static/js/vendor/jquery.tipTip.min.js"></script>
+    <script src="https://arne.delaat.net/static/js/video.js"></script>
 {% endblock %}
