--- a/pages/fotos.html
+++ b/pages/fotos.html
@@ -8,11 +8,11 @@
 
 {% block body %}
     <iframe class="album" src="about:blank" height="750" id="target"
-            data-album="http://arne.delaat.net/Photos_Archery/">
+            data-album="https://arne.delaat.net/Photos_Archery/">
     </iframe>
 {% endblock %}
 
 {% block scripts %}
-    <script src="http://arne.delaat.net/static/js/vendor/jquery-1.10.2.js"></script>
-    <script src="http://arne.delaat.net/static/js/photos.js"></script>
+    <script src="https://arne.delaat.net/static/js/vendor/jquery-1.10.2.js"></script>
+    <script src="https://arne.delaat.net/static/js/photos.js"></script>
 {% endblock %}
