Update locatie of shooting range.

--- a/pages/adres.html
+++ b/pages/adres.html
@@ -12,8 +12,8 @@
     <p>
         Het adres voor het verenigingsgebouw is:<br>
         S.H.S. Geronimo<br>
-        De Molenweg 28<br>
-        3981 CC Bunnik
+        Koelaan 1<br>
+        3703 CS Zeist
     </p>
 
     <p>
