--- a/pages/activiteiten.html
+++ b/pages/activiteiten.html
@@ -12,13 +12,10 @@
 
     <h2>Activiteiten en wedstrijden</h2>
 
-    <h3>2018</h3>
+    <h3>2019</h3>
 
     <ul>
-        <li>23 september, zondag 13:00 - Koningsschieten (binnen)
-        <li>30 september, zondag 13:00 - Jaarafsluiting
-        <li>5 november, maandag 20:00 - Halloweenverschieting
-        <li>16 december, zondag 13:00 - Kerstverschieting
+        <li>6 mei, maandag 19:30 - Opening nieuwe schiethal (binnen)
     </ul>
 
     <h2>Uitslagen en verslagen</h2>
