--- a/pages/activiteiten.html
+++ b/pages/activiteiten.html
@@ -16,6 +16,8 @@
 
     <ul>
         <li>6 mei, maandag 19:30 - Opening nieuwe schiethal (binnen)
+        <li>13 mei, maandag 19:30 - Klusavond (binnen)
+        <li>15 september, zondag 19:30 - Geheugen van Zeist (buiten)
     </ul>
 
     <h2>Uitslagen en verslagen</h2>
