Remove unused css and update used jQuery version

--- a/pages/filmpjes.html
+++ b/pages/filmpjes.html
@@ -8,7 +8,6 @@
 
 {% block head %}
     <link rel="stylesheet" href="https://arne.delaat.net/static/css/vendor/normalize.css">
-    <link rel="stylesheet" href="https://arne.delaat.net/static/css/vendor/font-awesome.css">
     <link rel="stylesheet" href="https://arne.delaat.net/static/css/tipTip.css">
     <link rel="stylesheet" href="https://arne.delaat.net/static/css/video.css">
     <link rel="stylesheet" href="https://arne.delaat.net/static/css/icons.css">
@@ -54,7 +53,7 @@
 {% endblock %}
 
 {% block scripts %}
-    <script src="https://arne.delaat.net/static/js/vendor/jquery-1.10.2.js"></script>
+    <script src="https://arne.delaat.net/static/js/vendor/jquery-3.4.1.min.js"></script>
     <script src="https://arne.delaat.net/static/js/vendor/jquery.tipTip.min.js"></script>
     <script src="https://arne.delaat.net/static/js/video.js"></script>
 {% endblock %}
