Add new events; halloween verschieting, nieuwjaarsreceptie.

--- a/pages/activiteiten.html
+++ b/pages/activiteiten.html
@@ -17,7 +17,14 @@
     <ul>
         <li>6 mei, maandag 19:30 - Opening nieuwe schiethal (binnen)
         <li>13 mei, maandag 19:30 - Klusavond (binnen)
-        <li>15 september, zondag 12.00 - Geheugen van Zeist (buiten)
+        <li>15 september, zondag 12:00 - Geheugen van Zeist (buiten)
+        <li>4 november, maandag 20:00 - Halloween verschieting (binnen)
+    </ul>
+
+    <h3>2020</h3>
+
+    <ul>
+        <li>5 januari, zondag 14:00 - Nieuwjaarsreceptie (binnen)
     </ul>
 
     <h2>Uitslagen en verslagen</h2>
