Correct jeugduur day

--- a/pages/openingstijden.html
+++ b/pages/openingstijden.html
@@ -40,7 +40,7 @@
             <td>woensdag</td>
             <td>19:30 - 21:30</td>
             <td style="text-align: right;">1 mei - eind september</td>
-            <td>Eerst jeugd uur, daarna vrij schieten.</td>
+            <td></td>
         </tr>
         <tr class="faded">
             <td>donderdag</td>
@@ -52,7 +52,7 @@
             <td>vrijdag</td>
             <td>19:30 - 21:30</td>
             <td style="text-align: right;">1 mei - eind september</td>
-            <td></td>
+            <td>Eerst jeugd uur, daarna cursus of vrij schieten.</td>
         </tr>
         <tr class="faded">
             <td>zaterdag</td>
