Hard-code external link to photos
The album does not allow embedding since it sets the
'X-Frame-Options: SAMEORIGIN' header

--- a/pages/activiteiten/koningschieten/2015.html
+++ b/pages/activiteiten/koningschieten/2015.html
@@ -10,7 +10,7 @@
 ## Koningschieten 2015
 
 De wedstrijd vond plaats op zaterdag 27 Juni. De foto's van de
-wedstrijd zijn op de <a href="{% url '/fotos.html' %}">foto</a> pagina te vinden.
+wedstrijd zijn op de <a href="https://arne.delaat.net/Photos_Archery/">foto</a> pagina te vinden.
 
 ### Uitslagen
 
