--- a/pages/activiteiten/sinterkerstnieuwjaarsverschieting.html
+++ b/pages/activiteiten/sinterkerstnieuwjaarsverschieting.html
@@ -30,7 +30,7 @@
     </p>
 
     <p>
-        De foto's staan op de <a href="{% url '/fotos.html#2011/SinterKerstNieuwjaar' %}">foto
-        pagina</a>.
+        De foto's staan op de <a href="https://arne.delaat.net/Photos_Archery/">
+        foto pagina</a>.
     </p>
 {% endblock %}
