Open linked images in same window

--- a/pages/geronimo.html
+++ b/pages/geronimo.html
@@ -47,35 +47,35 @@
 
     <table><tr>
         <td>
-            <a target="_blank" href="{% static '/static/images_geronimo/composite.jpg' %}">
+            <a href="{% static '/static/images_geronimo/composite.jpg' %}">
                 <img style="float:right;" alt="Composite bow"
                      src="{% static '/static/images_geronimo/thumbs/composite.jpg' %}" /><br>
                 Composite bow
             </a>
         </td>
         <td>
-            <a target="_blank" href="{% static '/static/images_geronimo/long.jpg' %}">
+            <a href="{% static '/static/images_geronimo/long.jpg' %}">
                 <img style="float:right;" alt="Longbow"
                      src="{% static '/static/images_geronimo/thumbs/long.jpg' %}" /><br>
                 Longbow
             </a>
         </td>
         <td>
-            <a target="_blank" href="{% static '/static/images_geronimo/bare.jpg' %}">
+            <a href="{% static '/static/images_geronimo/bare.jpg' %}">
                 <img style="float:right;" alt="Barebow"
                      src="{% static '/static/images_geronimo/thumbs/bare.jpg' %}" /><br>
                 Barebow
             </a>
         </td>
         <td>
-            <a target="_blank" href="{% static '/static/images_geronimo/recurve.jpg' %}">
+            <a href="{% static '/static/images_geronimo/recurve.jpg' %}">
                 <img style="float:right;" alt="Recurvebow"
                      src="{% static '/static/images_geronimo/thumbs/recurve.jpg' %}" /><br>
                 Recurve bow
             </a>
         </td>
         <td>
-            <a target="_blank" href="{% static '/static/images_geronimo/compound.jpg' %}">
+            <a href="{% static '/static/images_geronimo/compound.jpg' %}">
                 <img style="float:right;" alt="Compound bow"
                      src="{% static '/static/images_geronimo/thumbs/compound.jpg' %}" /><br>
                 Compound bow
