Update Archery TV link

--- a/pages/links.html
+++ b/pages/links.html
@@ -62,7 +62,7 @@
         <td>
             <h5>Overige</h5>
             <ul>
-                <li><a rel="noreferrer" href="http://www.archery.tv">Archery TV</a></li>
+                <li><a rel="noreferrer" href="https://www.youtube.com/user/archerytv">Archery TV</a></li>
             </ul>
         </td>
     </tr></table>
