--- a/pages/links.html
+++ b/pages/links.html
@@ -36,6 +36,7 @@
         <td style="width: 240px">
             <h5>Boogwinkels</h5>
             <ul>
+                <li><a rel="noreferrer" href="https://www.3darcherystore.nl/">3D Archery Store</a></li>
                 <li><a rel="noreferrer" href="https://www.jvd-archery.nl/">JVD Archery</a></li>
                 <li><a rel="noreferrer" href="https://www.vbs-archery.nl/">Van Buggenum Sports</a></li>
                 <li><a rel="noreferrer" href="https://www.all-inn-traditional.nl/">All-Inn-Traditional</a></li>
@@ -43,6 +44,7 @@
                 <li><a rel="noreferrer" href="https://www.europearchery.com/">Europe Archery</a></li>
                 <li><a rel="noreferrer" href="https://www.3riversarchery.com/">3Rivers Archery</a></li>
                 <li><a rel="noreferrer" href="https://www.bogensportwelt.de/">BogenSportWelt</a></li>
+                
             </ul>
 
             <h5>Boog merken</h5>
