--- a/pages/links.html
+++ b/pages/links.html
@@ -44,7 +44,7 @@
                 <li><a rel="noreferrer" href="https://www.europearchery.com/">Europe Archery</a></li>
                 <li><a rel="noreferrer" href="https://www.3riversarchery.com/">3Rivers Archery</a></li>
                 <li><a rel="noreferrer" href="https://www.bogensportwelt.de/">BogenSportWelt</a></li>
-                
+                <li><a rel="noreferrer" href="https://www.3darcherystore.nl/">3D Archery Store</a></li>
             </ul>
 
             <h5>Boog merken</h5>
