--- a/pages/aanmelden.html
+++ b/pages/aanmelden.html
@@ -7,7 +7,7 @@
 {% block logo-position %}top: 20px; left: 430px;{% endblock %}
 
 {% block body %}
-    <h2>Aanmeld formulier beginnerscursus</h2>
+    <h2>Aanmeldingsformulier beginnerscursus</h2>
 
     <p>
         Met dit formulier kun je je aanmelden voor de
@@ -27,7 +27,7 @@
         voor meer informatie.
     </p>
 
-    <h3>Aanmeld formulier</h3>
+    <h3>Aanmeldingsformulier</h3>
 
     <p>
         <strong>Het inschrijf formulier is tijdelijk gesloten, rond april 2020 zullen de
