--- a/pages/aanmelden.html
+++ b/pages/aanmelden.html
@@ -11,7 +11,7 @@
 
     <p>
         Met dit formulier kun je je aanmelden voor de
-        beginnerscursus. Deze start in januari 2021 en is vanaf 18 jaar. Aanmeldingen uit Zeist en omstreken krijgen voorrang.
+        beginnerscursus. Deze start in januari 2021 en is vanaf 18 jaar. Inwoners uit Zeist en omstreken krijgen voorrang.
     </p>
 
     <p>
