--- a/pages/beginnerscursus.html
+++ b/pages/beginnerscursus.html
@@ -52,8 +52,7 @@
 <h4>Wanneer?</h4>
 
 <p class="textwidth">
-    Er zijn meerdere beginnerscursussen per jaar;
-    De eerste cursus van het jaar start eind januari 2019.
+    Er zijn meerdere beginnerscursussen per jaar.
 </p>
 
 <p class="textwidth">
