--- a/pages/aanmelden.html
+++ b/pages/aanmelden.html
@@ -30,7 +30,7 @@
     <h3>Aanmeldingsformulier</h3>
 
     <p>
-        <strong>Het inschrijf formulier is tijdelijk gesloten, rond april 2020 zullen de
+        <strong>Het inschrijf formulier is tijdelijk gesloten, eind augustus 2020 zullen de
         inschrijvingen weer open gaan!</strong>
     </p>
 
