--- a/pages/aanmelden.html
+++ b/pages/aanmelden.html
@@ -28,7 +28,7 @@
     </p>
 
     <h3>Aanmeldingsformulier</h3>
-
+<li><a rel="noreferrer" href="https://forms.gle/6CYVK9zZU1gsghEn8">Klik hier</a></li>
     <p>
 {% comment %}
         <strong>Het inschrijf formulier is tijdelijk gesloten, eind augustus 2020 zullen de
