Fix link to sign up form

--- a/pages/aanmelden.html
+++ b/pages/aanmelden.html
@@ -28,9 +28,13 @@
     </p>
 
     <h3>Aanmeldingsformulier</h3>
-<li><a rel="noreferrer" href="https://forms.gle/6CYVK9zZU1gsghEn8">Klik hier</a></li>
+
     <p>
+        <a rel="noreferrer" href="https://forms.gle/6CYVK9zZU1gsghEn8">Klik hier</a>
+    </p>
+
 {% comment %}
+    <p>
         <strong>Het inschrijf formulier is tijdelijk gesloten, eind augustus 2020 zullen de
         inschrijvingen weer open gaan!</strong>
     </p>
