--- a/pages/aanmelden.html
+++ b/pages/aanmelden.html
@@ -30,7 +30,7 @@
     <h3>Aanmeldingsformulier</h3>
 
     <p>
-        <a href="https://forms.gle/6CYVK9zZU1gsghEn8">Klik hier</a>
+        <a href="https://forms.gle/6CYVK9zZU1gsghEn8"><h3> Klik hier </h3></a>
     </p>
 
 {% comment %}
