--- a/pages/aanmelden.html
+++ b/pages/aanmelden.html
@@ -33,6 +33,11 @@
         <a href="https://forms.gle/6CYVK9zZU1gsghEn8">Klik hier</a>
     </p>
 
+<div class="cognito">
+<script src="https://www.cognitoforms.com/s/qJVkDWqzO0uLONsVqlf1Dw"></script>
+<script>Cognito.load("forms", { id: "1" });</script>
+</div>
+
 {% comment %}
     <p>
         <strong>Het inschrijf formulier is tijdelijk gesloten, eind augustus 2020 zullen de
