--- a/pages/aanmelden.html
+++ b/pages/aanmelden.html
@@ -30,18 +30,15 @@
     <h3>Aanmeldingsformulier</h3>
 
     <p>
-        <a href="https://forms.gle/6CYVK9zZU1gsghEn8">Klik hier</a>
-    </p>
+       
+   <a href="https://https://www.cognitoforms.com/Geronimo4/InschrijfformulierBeginnerscursusJanuari2021vanaf18Jaar">Klik hier</a>
+ </p>
 
-<a href="https://www.cognitoforms.com/s/qJVkDWqzO0uLONsVqlf1D">Klik hier</a>
-
-
-<div class="cognito">
-<script src="https://www.cognitoforms.com/s/qJVkDWqzO0uLONsVqlf1Dw"></script>
-<script>Cognito.load("forms", { id: "1" });</script>
-</div>
 
 {% comment %}
+
+ <a href="https://forms.gle/6CYVK9zZU1gsghEn8">Klik hier</a>
+
     <p>
         <strong>Het inschrijf formulier is tijdelijk gesloten, eind augustus 2020 zullen de
         inschrijvingen weer open gaan!</strong>
