--- a/pages/aanmelden.html
+++ b/pages/aanmelden.html
@@ -32,8 +32,13 @@
     <p>
        
    <a href="https://https://www.cognitoforms.com/Geronimo4/InschrijfformulierBeginnerscursusJanuari2021vanaf18Jaar">Klik hier</a>
- </p>
 
+   </p>
+
+<div class="cognito">
+<script src="https://www.cognitoforms.com/s/qJVkDWqzO0uLONsVqlf1Dw"></script>
+<script>Cognito.load("forms", { id: "1" });</script>
+</div>
 
 {% comment %}
 
