--- a/pages/aanmelden.html
+++ b/pages/aanmelden.html
@@ -9,6 +9,7 @@
 {% block body %}
     <h2>Aanmeldingsformulier beginnerscursus</h2>
 
+{% comment %}
     <p>
         Met dit formulier kun je je aanmelden voor de
         beginnerscursus. Deze start in januari 2021 en is vanaf 18 jaar. Inwoners uit Zeist en omstreken krijgen voorrang.
@@ -27,16 +28,15 @@
         voor meer informatie.
     </p>
 
-    {% comment %}
+    
+
+    link naar aanmeldingformulier
 
     <div class="cognito">
     <script src="https://www.cognitoforms.com/s/qJVkDWqzO0uLONsVqlf1Dw"></script>
     <script>Cognito.load("forms", { id: "1" });</script>
    </div>   
    
-  
-
- <a href="https://forms.gle/6CYVK9zZU1gsghEn8">Klik hier</a>
 
     <p>
         <strong>Het inschrijf formulier is tijdelijk gesloten, eind augustus 2020 zullen de
