--- a/pages/aanmelden.html
+++ b/pages/aanmelden.html
@@ -9,6 +9,10 @@
 {% block body %}
     <h2>Aanmeldingsformulier beginnerscursus</h2>
 
+<p>
+    De inschrijving voor de beginnerscursus van januari 2021 zit inmiddels vol. Later het 2021 wordt er een nieuwe beginnerscursus aangeboden.
+</p>
+
 {% comment %}
     <p>
         Met dit formulier kun je je aanmelden voor de
