--- a/pages/aanmelden.html
+++ b/pages/aanmelden.html
@@ -9,8 +9,8 @@
 {% block body %}
     <h2>Aanmeldingsformulier beginnerscursus</h2>
 
-<p>
-    De inschrijving voor de beginnerscursus van januari 2021 zit inmiddels vol. Later het 2021 wordt er een nieuwe beginnerscursus aangeboden.
+<p class="textwidth"
+    De inschrijving voor de beginnerscursus van januari 2021 zit inmiddels vol. Later in 2021 wordt een nieuwe beginnerscursus aangeboden.
 </p>
 
 {% comment %}
