--- a/pages/aanmelden.html
+++ b/pages/aanmelden.html
@@ -9,7 +9,7 @@
 {% block body %}
     <h2>Aanmeldingsformulier beginnerscursus</h2>
 
-<p class="textwidth"
+<p class="textwidth">
     De inschrijving voor de beginnerscursus van januari 2021 zit inmiddels vol. Later in 2021 wordt een nieuwe beginnerscursus aangeboden.
 </p>
 
