--- a/pages/contact.html
+++ b/pages/contact.html
@@ -65,7 +65,7 @@
 
     var _voorz = "voorzitter",
         _secre = "secretaris",
-        _penni = "penningmeester",
+        _penni = "penningmeester";
 
     var _voorz2 = _mailt + _voorz + _at + _extger,
         _secre2 = _mailt + _secre + _at + _extger,
