Remove unused part of javascript

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -69,8 +69,7 @@
 
     var _voorz2 = _mailt + _voorz + _at + _extger,
         _secre2 = _mailt + _secre + _at + _extger,
-        _penni2 = _mailt + _penni + _at + _extger,
-        _webma2 = _mailt + _webma + _at + _extger;
+        _penni2 = _mailt + _penni + _at + _extger;
 
     // Bestuur
     document.getElementById('email_voorz').href = _voorz2;
